src/test/deca/etapeB/valid/class_decl/field_protected_int.deca
// Description:
//    Déclaration d'une classe avec un attribut int
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

{

}

class {
	protected int a;
}
