src/test/deca/etapeB/invalid/decl_void.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 11 : impossible de déclarer une variable de type void
// 
// Historique:
//    cree le 01/01/2016

{
   void my_var;
}
